--- a/src/Components/FormControls/FormControls.css
+++ b/src/Components/FormControls/FormControls.css
@@ -1,6 +1,6 @@
 .FormControls {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .FormControls input:not([type='checkbox']):not([type='radio']),
@@ -16,7 +16,6 @@ textarea {
 
 label {
     display: flex;
-    align-items: center;
     gap: 5px;
     margin-top: 4px;
 }
@@ -25,6 +24,11 @@ label {
     color: var(--caption-color);
     font-family: var(--label-font);
     font-size: 0.9em;
+}
+
+.LabelText .Required::after {
+    content: '*';
+    vertical-align: super;
 }
 
 .FormControls textarea {
